# deepfrag2

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  INSTALL_NOTES.md  InferenceDF2.py  MANIFEST.in  MainDF2.py  MainDF2.submit.sh  MainDF2.submit_CRC_test_every_model.sh  MainDF2.submit_MOAD_inference.sh  MainDF2.submit_MOAD_test.sh  MainDF2.submit_MOAD_train.sh  MainDF2.submit_MOAD_train_resume.sh  MainDF2.submit_PdbSdf_fine_tuning.sh  MainDF2.submit_PdbSdf_test.sh  MainDF2.submit_assess_every_model.sh  MainDF2.submit_fine_tuning.sh  MainDF2.submit_inference.sh  MainDF2.submit_inference_on_custom_set.sh  MainDF2.submit_inferencet_on_custom_set.sh  MainDF2.submit_resumed.sh  MainDF2.submit_test.sh  MainDF2.submit_test_MOAD.sh  MainDF2.submit_test_PdbSdf_data.sh  MainDF2.submit_test_on_custom_set.sh  MainDF2.submit_train.sh  MainDF2.submit_train_resume.sh  MainDF2.submit_train_resumed.sh  README.md  TODO.md  build_package.sh  check_all_docstrings.sh  environment.yml  environment_cpu.yml  environment_linux.yml  environment_osx.yml  manager  (+7 more)
apps/: README.md  easy_app.py  example_custom_params.json  run_app.py
atlas/: draw.py  molecule_util.py  test_molecule_util.py  util.py
collagen/: __init__.py  args_defaults.py  checkpoints.py  draw.py  metrics.py  util.py
conda-recipe/: build.sh  meta.yaml
data/: README.md  download_moad.sh  download_moad_little.sh
docker/: .dockerignore  Dockerfile  Dockerfile.cpu  Dockerfile.cu111  README.md  Singularity.def  build_singularity.sh  deeplig_docker.sh  manager.py  requirements.txt  requirements.txt.cpu  requirements.txt.cu111  start_docker.sh  start_singularity.sh
docs/: Docker.rst  Examples.rst  Jupyter.rst  LoadingData.rst  Mol.rst  Overview.rst  README.md  Voxelization.rst  _sidebar.md  conf.py  data.md  index.html  index.rst  models.md
jdd_tests/: deeplig.py  deeplig.runit.little.sh  deeplig.runit.sh
misc_scripts/: analysis_results_on_paired_data.py  analyze_logs_for_paired_data.py  checking_paired_data.py  complexity_score_vs_activity_fragments.py  debug_last_ligands_with_errors.py  detect_frag_predict_biases.py  diversity_metrics.py  find_bioisosteres.py  finetune_rigorous_eval.sh  (+11 more)
(+791 files in other folders)
