[tool.poetry]
name = "collagen"
version = "0.1.0"
description = ""
authors = ["hgarrereyn <harrisonmichaelgreen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
# numpy = "1.18"
# numba = "0.50.1"
# torch = "1.7.1"
# tqdm = "4.62"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
